--- a/DrawingTest/Base.lproj/MainMenu.xib
+++ b/DrawingTest/Base.lproj/MainMenu.xib
@@ -689,9 +689,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="iXT-sK-H5a" customClass="CanvasView" customModule="DrawingTest" customModuleProvider="target">
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="iXT-sK-H5a" userLabel="Canvas" customClass="CanvasView" customModule="DrawingTest" customModuleProvider="target">
                         <rect key="frame" x="20" y="20" width="440" height="320"/>
                     </customView>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FLK-nO-xoN">
+                        <rect key="frame" x="-2" y="343" width="37" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="7Vv-jY-siJ">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="iXT-sK-H5a" secondAttribute="bottom" constant="20" id="CAz-ON-oIW"/>
@@ -701,5 +710,11 @@
                 </constraints>
             </view>
         </window>
+        <customObject id="QTm-Mf-ugX" customClass="DrawingController" customModule="DrawingTest" customModuleProvider="target">
+            <connections>
+                <outlet property="pressureLabel" destination="FLK-nO-xoN" id="C6J-sF-XzB"/>
+                <outlet property="view" destination="iXT-sK-H5a" id="feq-il-J1R"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
